# fips-shapeop

./: CMakeLists.txt  LICENSE  fips.cmd  fips.yml
libShapeOp/src/: Common.h  Solver.cpp  Solver.h
